alert now appears correctly plus minor fixes

--- a/src/ui/elements/Alert/alert.stories.mdx
+++ b/src/ui/elements/Alert/alert.stories.mdx
@@ -33,7 +33,7 @@ Let's define a story for our `Alert` component
 ### Avatar rounded
 <Preview>
   <Story name="bad">
-    <Alert variant="bad">You should take a look at that!</Alert>
+    <Alert variant="negative">You should take a look at that!</Alert>
   </Story>
 </Preview>
 
@@ -45,7 +45,7 @@ To get started with the avatar component, you just need to import it.
 ```jsx
 import Alert from 'src/ui/Alert'
 
-<Alert variant="bad">Bad!</Alert>
+<Alert variant="negative">Bad!</Alert>
 ```
 ## API
 ### [Alert](https://gitlab.com/moodlenet/clients/react/tree/develop/src/ui/elements/Alert)
