added translatable and parametrized page-titles services, and used in all pages

--- a/src/ui/pages/notFound/a.stories.mdx
+++ b/src/ui/pages/notFound/a.stories.mdx
@@ -16,7 +16,7 @@ Let's define a story for the `NotFound` page
 <Preview>
   <Story name="NotFound page">
     <Guest>
-      <NotFound />
+      <NotFoundHOC />
     </Guest>
   </Story>
 </Preview>
