--- a/src/ui/pages/home/a.stories.mdx
+++ b/src/ui/pages/home/a.stories.mdx
@@ -25,7 +25,6 @@ import { Community } from 'ui/modules/Previews/Community'
 import { Comment } from 'ui/modules/Previews/Comment'
 import { Thread } from 'ui/modules/Previews/Thread'
 import { LikedComment } from 'ui/modules/Previews/LikedComment'
-import { ComponentBag } from 'ui/lib/componentBag'
 
 <Meta title="Pages|My MoodleNet" component={Home} />
 
@@ -42,8 +41,8 @@ The `Home` (or '**My MoodleNet**') page shows the user timeline, with links to a
 <Preview>
   <Story name="Home page">
     <WithSidebar
-      HeaderBox={ComponentBag(MainHeader, { ...getMainHeaderProps() })}
-      SidebarBox={ComponentBag(Sidebar, { ...useGetSidebarProps() })}
+      HeaderBox={<MainHeader {...getMainHeaderProps()} />}
+      SidebarBox={<Sidebar {...useGetSidebarProps()} />}
     >
       <Home
         InboxElements={
