--- a/src/ui/pages/settings/user.stories.mdx
+++ b/src/ui/pages/settings/user.stories.mdx
@@ -5,10 +5,7 @@ import { Box } from 'rebass'
 import { useGetEditProfileProps } from 'ui/mock/settings'
 import { MainHeader } from 'ui/modules/MainHeader'
 import { getMainHeaderProps } from 'ui/mock/mainHeader'
-import { ComponentBag } from 'ui/lib/componentBag'
-
 import { WithoutSidebar } from 'ui/templates/withoutSidebar'
-const Head = ComponentBag(MainHeader, getMainHeaderProps())
 
 <Meta title="Pages|Settings - User" component={Settings} />
 
@@ -24,7 +21,7 @@ Let's define a story for the `Settings` page
 
 <Preview>
   <Story name="Settings page">
-    <WithoutSidebar HeaderBox={Head}>
+    <WithoutSidebar HeaderBox={<MainHeader {...getMainHeaderProps()} />}>
       <Settings {...useGetEditProfileProps()} />
     </WithoutSidebar>
   </Story>
