refactored ConfirmationModal to a simple stateless ConfirmationPanel, and refactored its use in app

--- a/src/ui/modules/ConfirmationPanel/a.stories.mdx
+++ b/src/ui/modules/ConfirmationPanel/a.stories.mdx
@@ -1,21 +1,21 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks'
 import { PropsTable } from '@storybook/components'
-import { useGetConfirmationModalProps } from 'ui/mock/confirmationModal'
-import { ConfirmationModal } from '.'
+import { useGetConfirmationPanelProps } from 'ui/mock/confirmationPanel'
+import { ConfirmationPanel } from '.'
 import { action } from '@storybook/addon-actions'
 import { Box } from 'rebass'
 import Modal from 'ui/modules/Modal'
 
-<Meta title="Modules| Confirmation Modal" component={ConfirmationModal} />
+<Meta title="Modules| Confirmation Modal" component={ConfirmationPanel} />
 
-# ConfirmationModal
+# ConfirmationPanel
 
 Let's define a story for the `Confirmation Modal preview` module
 
 <Preview>
   <Story name="Confirmation Modal module">
     <Modal closeModal={action('close modal')}>
-      <ConfirmationModal {...useGetConfirmationModalProps()} />
+      <ConfirmationPanel {...useGetConfirmationPanelProps()} />
     </Modal>
   </Story>
 </Preview>
