--- a/src/ui/pages/community/a.stories.mdx
+++ b/src/ui/pages/community/a.stories.mdx
@@ -42,8 +42,14 @@ The `Community` page displays a single MoodleNet community. It is made up of the
 <Preview>
   <Story name="community page">
     <WithSidebar
+      SearchBox={<h1>test</h1>}
       HeaderBox={<MainHeader {...getMainHeaderProps()} />}
       SidebarBox={<Sidebar {...useGetSidebarProps()} />}
+      userImage={"string"}
+      userLink={"/"}
+      username={"test"}
+      name={"test"}
+      signout={() => console.log("test")}
     >
       <Community
         {...{
