--- a/src/ui/pages/collection/a.stories.mdx
+++ b/src/ui/pages/collection/a.stories.mdx
@@ -51,7 +51,7 @@ The `Collection` page displays a single MoodleNet collection. It is made up of t
         loadMoreActivities={useGetLoadMoreProps()}
         loadMoreResources={useGetLoadMoreProps()}
         loadMoreFollowers={useGetLoadMoreProps()}
-        HeroCollectionBox={<HeroCollection {...useGetHeroCollectionProps(true)} />}
+        HeroCollection={<HeroCollection {...useGetHeroCollectionProps(true)} />}
         ActivitiesBox={
           <React.Fragment>
             <ActivityPreview
