--- a/src/ui/pages/community/a.stories.mdx
+++ b/src/ui/pages/community/a.stories.mdx
@@ -138,7 +138,7 @@ The `Community` page displays a single MoodleNet community. It is made up of the
               </Box>
             </React.Fragment>
           ),
-          HeroCommunityBox: <HeroCommunity {...useGetHeroCommunityProps(true)} />,
+          HeroCommunity: <HeroCommunity {...useGetHeroCommunityProps(true)} />,
           basePath: '/',
           ThreadsBox: (
             <React.Fragment>
