--- a/src/ui/modules/CreateResourcePanel/a.stories.mdx
+++ b/src/ui/modules/CreateResourcePanel/a.stories.mdx
@@ -1,20 +1,20 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks'
 import { PropsTable } from '@storybook/components'
-import { useGetCreateIntentModalProps } from 'ui/mock/createIntentModal'
-import { CreateIntentPanel } from 'ui/modules/CreateIntentPanel'
+import { useGetEditResourceModalProps } from 'ui/mock/editResourceModal'
+import { CreateResourcePanel } from 'ui/modules/CreateResourcePanel'
 import { action } from '@storybook/addon-actions'
 import Modal from 'ui/modules/Modal'
 
-<Meta title="Modules|Create an Intent" component={CreateIntentPanel} />
+<Meta title="Modules|Create Resource" component={CreateResourcePanel} />
 
-# CreateIntentPanel
+# CreateResourcePanel
 
-Let's define a story for the `Create Inent Panel preview` module
+Let's define a story for the `Create Resource Panel preview` module
 
 <Preview>
-  <Story name="Create an Intent">
+  <Story name="Create Resource">
     <Modal closeModal={action('close modal')}>
-      <CreateIntentPanel {...useGetCreateIntentModalProps()} />
+      <CreateResourcePanel  {...useGetEditResourceModalProps()} />
     </Modal>
   </Story>
 </Preview>
